Change hover effect in buttons

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 					<video autoplay muted loop plays-inline class="home-video" data-autoplay>
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
-				</div>-->	
-				<div class="fp-bg"></div>			
+				</div>-->			
 				<div class="home-bottom-text" data-card3d="" data-card3d-delta="5">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
@@ -158,11 +157,9 @@
 			</div>
 				<!--ABOUT US SECTION FIRST-->
 				<div class="section about-second child">
-					<div class="fp-bg">
-						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
-							<source src="images/dessert_dark.mp4" type="video/mp4">
-						</video>
-					</div>					
+					<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+						<source src="images/dessert_dark.mp4" type="video/mp4">
+					</video>			
 					<div class="about-second-wrapper">
 						<div class="about-second-text">
 							<h1>OUR STORY</h1>
@@ -214,11 +211,9 @@
 				</div>	
 				<!--ABOUT US TEAM SECTION-->
 				<div class="section about-third child" id="about_third">
-					<div class="fp-bg">
-						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
-							<source src="images/dessert_dark.mp4" type="video/mp4">
-						</video>
-					</div>
+					<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+						<source src="images/dessert_dark.mp4" type="video/mp4">
+					</video>
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
@@ -301,11 +296,9 @@
 				</div>
 				<!--ABOUT US TEAM2 SECTION-->
 				<div class="section team child">
-					<div class="fp-bg">
-						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
-							<source src="images/dessert_dark.mp4" type="video/mp4">
-						</video>
-					</div>
+					<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+						<source src="images/dessert_dark.mp4" type="video/mp4">
+					</video>
 					<div class="team-text">
 						<h1>OUR TEAM</h1>
 						<h4>Our Dynamic Team of Experts at Sadaf Media</h4> 
@@ -339,7 +332,6 @@
 				</div>
 			<!--SERVICES SECTION-->
 			<div class="section services child">
-				<div class="fp-bg"></div>
 				<div class="services-text">
 					<div data-card3d="" data-card3d-delta="5">
 						<h1>HOW WE WORK</h1>
@@ -372,7 +364,6 @@
 						</div>
 					</div>
 					<div class="service-wrapper animate">
-						<div class="fp-bg"></div>
 						<div class="services-more">
 							<div class="service first">
 								<img class="icon" src="images/services/1/icon.png" alt="service icon">
@@ -410,7 +401,6 @@
 			</div>			
 			<!--WORK SECTION-->
 			<div class="section work child">
-				<div class="fp-bg"></div>
 				<div class="work-text">
 					<h1>THE WAY WE WORK</h1>
 					<h4>IT’S WHAT’S ON THE INSIDE THAT MATTERS</h4>
@@ -452,7 +442,6 @@
 			</div>
 			<!--BLOG SECTION-->
 			<div class="section blog child">
-				<div class="fp-bg"></div>
 				<div class="container">
 					<div class="blog-text">
 						<h1>UNLEASHING MARKETING MARVELS</h1>
@@ -535,8 +524,7 @@
 			</div>
 			<!--CONTACT US SECTION-->
 			<div class="section contactus child">
-				<div class="fp-bg"></div>
-				<video autoplay muted loop plays-inline class="video-location fp-bg" data-autoplay>
+				<video autoplay muted loop plays-inline class="video-location" data-autoplay>
 					<source src="images/abu_dhabi_dark.mp4" type="video/mp4">
 				</video>
 				<div class="contactus-text">
@@ -570,7 +558,7 @@
 			</div>
 			<!--LOCATION SECTION-->
 			<div class="section location child">
-				<video autoplay muted loop class="back-video fp-bg" data-autoplay>
+				<video autoplay muted loop class="back-video" data-autoplay>
 					<source src="images/abu_dhabi.mp4" type="video/mp4">
 				</video>
 				<div class="location-text">
