Fixes in styles

--- a/index.html
+++ b/index.html
@@ -218,8 +218,10 @@
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
 							<div class="text-wrapper">
-								<p>Our Dynamic Team of Experts at Sadaf Media</p>
-								<p>At Sadaf Media, we take great pride in our exceptional tea.</p> 
+								<p>Our dynamic team of experts
+									at Sadaf Media, We take great pride
+									in our exceptional team.
+								</p>
 							</div>			
 						</div>
 						<div class="wrapper">
@@ -301,8 +303,10 @@
 					</video>
 					<div class="team-text">
 						<h1>OUR TEAM</h1>
-						<h4>Our Dynamic Team of Experts at Sadaf Media</h4> 
-						<h4>At Sadaf Media, we take great pride in our exceptional tea</h4>
+						<h4>Our dynamic team of experts
+							at Sadaf Media, We take great pride
+							in our exceptional team.
+						</h4> 
 					</div>
 					<div class="gallery-team animate">
 						<div class="gallery-container-team">
