--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
 				</div>-->			
-				<div class="home-bottom-text" data-card3d="" data-card3d-delta="5">
+				<div class="home-bottom-text" data-card3d="" data-card3d-no-reset="true" data-card3d-delta="3">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
 						with the Leading Marketing Agency
@@ -337,7 +337,7 @@
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<div data-card3d="" data-card3d-delta="5">
+					<div data-card3d="" data-card3d-no-reset="true" data-card3d-delta="3">
 						<h1>HOW WE WORK</h1>
 						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
 						<div class="text-wrapper">
