--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
 				</div>-->			
-				<div class="home-bottom-text" data-card3d="" data-card3d-no-reset="true" data-card3d-delta="3">
+				<div class="home-bottom-text" data-card3d=""  data-card3d-full-page-listening="true" data-card3d-no-reset="true" data-card3d-delta="3">
 					<h1 id="parallax-text">
-						<span>Unlock Your Digital Potential</span>
+						Unlock Your Digital Potential
 						with the Leading Marketing Agency
 					</h1>
 					<p id="fade_in">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
@@ -337,7 +337,7 @@
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<div data-card3d="" data-card3d-no-reset="true" data-card3d-delta="3">
+					<div data-card3d=""  data-card3d-full-page-listening="true" data-card3d-no-reset="true" data-card3d-delta="3">
 						<h1>HOW WE WORK</h1>
 						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
 						<div class="text-wrapper">
