Changes in card3d effects

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<video autoplay muted loop plays-inline class="back-video" data-autoplay>
 					<source src="images/beach.mp4" type="video/mp4">
 				</video>			
-				<div class="home-bottom-text" data-card3d=""  data-card3d-full-page-listening="true" data-card3d-no-reset="true" data-card3d-delta="3">
+				<div class="home-bottom-text" data-card3d=""  data-card3d-full-page-listening="true" data-card3d-delta="3">
 					<h1 id="parallax-text">
 						Unlock Your Digital Potential
 						with the Leading Marketing Agency
@@ -335,7 +335,7 @@
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<div data-card3d=""  data-card3d-full-page-listening="true" data-card3d-no-reset="true" data-card3d-delta="3">
+					<div data-card3d=""  data-card3d-full-page-listening="true" data-card3d-delta="3">
 						<h1>HOW WE WORK</h1>
 						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
 						<div class="text-wrapper">
