--- a/index.html
+++ b/index.html
@@ -31,25 +31,11 @@
 						<path d="M116.436 36.1076C124.905 36.1076 117.745 23.2215 127.152 22.1646V22.1239C109.629 22.9369 110.149 36.1076 116.436 36.1076Z" fill="white"/>
 						<path d="M145.445 64.6951V39.2277C145.445 28.1098 141.219 22.3374 129.705 22.0834V22.1748C133.818 22.7744 136.001 26.433 136.001 33.1606V39.2277V39.9899V60.935C135.397 65.2947 131.627 68.7703 127.643 68.7703C123.139 68.7703 120.066 65.7622 120.066 55.6301C120.066 46.2805 122.554 41.4634 131.181 40.2846L131.172 39.3903C119.573 40.1829 110.631 44.2378 110.631 56.0061C110.631 65.3862 115.088 69.7154 127.123 69.7154C132.834 69.7154 136.001 65.2947 136.001 63.9634V65.6402C136.001 67.9166 137.728 69.7154 139.808 69.7154H147.079C147.088 69.7154 145.445 67.7236 145.445 64.6951Z" fill="white"/>
 					</svg>
-					<svg class="black" width="174" height="71" viewBox="0 0 174 71" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path class="logo-s" d="M4.33278 43.9735C16.6277 43.9735 4.93638 68.6076 21.1315 68.6076C25.5517 68.6076 31.9591 65.0101 31.9591 57.4288C31.9591 37.9979 0.441878 34.3089 0.441878 16.5853C0.441878 7.86583 6.93291 1.90039 20.7879 1.90039C40.0102 1.90039 40.2702 19.6239 33.0828 19.6239C25.1988 19.6239 31.6991 2.75405 19.6642 2.75405C14.984 2.75405 10.7495 5.40648 10.7495 12.7947C10.7495 28.7195 42.0068 30.8943 42.0068 52.7845C42.0068 66.1483 29.1083 69.5629 20.4443 69.5629C-1.55465 69.5527 -3.81119 43.9735 4.33278 43.9735Z" fill="black"/>
-						<path style="display: none;" d="M98.764 66.1076C96.331 68.5771 93.1644 70.0304 88.8463 70.0304C79.3187 70.0304 74.2949 60.0812 74.2949 46.0568C74.2949 31.0874 80.0988 22.1748 93.5173 22.1748C97.8446 22.1748 101.141 25.1118 101.485 26.25V7.47966C101.485 4.45121 99.8412 2.36788 99.8412 2.36788L111.012 0V64.7967C111.012 67.8251 112.573 69.817 112.573 69.817H105.301C103.221 69.817 101.494 68.0182 101.494 65.7418V62.4491V57.4288V31.5548C101.494 29.187 99.414 23.0284 93.443 23.0284C88.3356 23.0284 83.739 27.6727 83.739 43.1199C83.739 61.7885 87.0263 67.378 92.3101 67.378C94.4645 67.378 96.4517 66.4735 98.0304 65.0406L98.764 66.1076Z" fill="black"/>
-						<path style="display: none;" d="M146.16 39.3901H148.221V19.4105C148.221 8.03853 151.769 2.16455 161.556 2.16455C174.891 2.16455 176.451 18.6584 169.784 18.6584C162.94 18.6584 169.087 3.11983 160.34 3.11983C156.272 3.11983 153.849 6.34137 153.849 10.0406C153.849 16.5751 157.656 31.2092 157.656 39.4003H169.134V40.3047H157.702L157.656 64.8067C157.656 67.8352 159.3 69.8271 159.3 69.8271H146.568C146.568 69.8271 148.212 67.8352 148.212 64.8067L148.258 40.3047H146.15L146.16 39.3901Z" fill="black"/>
-						<path style="display: none;" d="M44.6446 2.15454L49.1391 12.2968L53.6336 2.15454H56.2709V15.2033H53.7636V7.67283L50.4299 15.2033H47.839L44.5053 7.67283V15.2033H41.998V2.15454H44.6446Z" fill="#4598BE"/>
-						<path style="display: none;" d="M66.9951 2.15454V4.85779H60.7827V7.29681H66.1408V10.0204H60.7827V12.5001H66.9951V15.2033H58.2754V2.15454H66.9951Z" fill="#4598BE"/>
-						<path style="display: none;" d="M68.5273 2.15454H72.2047C76.6156 2.15454 78.0642 5.45738 78.0642 8.69925C78.0642 11.9818 76.5506 15.2033 72.1397 15.2033H68.5273V2.15454ZM72.1025 12.4594C74.9998 12.4594 75.5755 10.1118 75.5755 8.58746C75.5755 7.09356 75.0277 4.89844 72.1675 4.89844H71.0253V12.4594H72.1025Z" fill="#4598BE"/>
-						<path style="display: none;" d="M82.1498 2.15454H79.6426V15.1931H82.1498V2.15454Z" fill="#4598BE"/>
-						<path style="display: none;" d="M83.3672 15.2033L87.9824 2.15454H90.4711L95.0863 15.1931H92.5326L91.5669 12.4391H86.9052L85.9395 15.1931H83.3672V15.2033ZM87.8617 9.74599H90.5825L89.2268 5.86389L87.8617 9.74599Z" fill="#4598BE"/>
-						<path style="display: none;" d="M46.0733 36.1077C54.5422 36.1077 47.3826 23.2216 56.7895 22.1647V22.124C39.2572 22.937 39.7772 36.1077 46.0733 36.1077Z" fill="black"/>
-						<path style="display: none;" d="M75.0741 64.695V39.2275C75.0741 28.1097 70.8489 22.3373 59.334 22.0833V22.1747C63.4478 22.7743 65.6301 26.4328 65.6301 33.1605V39.2275V39.9897V60.9348C65.0265 65.2946 61.2934 68.7702 57.3096 68.7702C52.8059 68.7702 49.695 65.7621 49.695 55.63C49.695 46.2804 52.1837 41.4633 60.8105 40.2844L60.792 39.3901C49.2028 40.1828 40.2695 44.2275 40.2695 56.006C40.2695 65.386 44.764 69.7153 56.7989 69.7153C62.5099 69.7153 65.6393 65.2946 65.6393 63.9633V65.6401C65.6393 67.9165 67.3759 69.7153 69.4467 69.7153H76.7177C76.727 69.7153 75.0741 67.7234 75.0741 64.695Z" fill="black"/>
-						<path style="display: none;" d="M116.436 36.1077C124.905 36.1077 117.745 23.2216 127.152 22.1647V22.124C109.629 22.937 110.149 36.1077 116.436 36.1077Z" fill="black"/>
-						<path style="display: none;" d="M145.445 64.695V39.2275C145.445 28.1097 141.219 22.3373 129.705 22.0833V22.1747C133.818 22.7743 136.001 26.4328 136.001 33.1605V39.2275V39.9897V60.9348C135.397 65.2946 131.627 68.7702 127.643 68.7702C123.139 68.7702 120.066 65.7621 120.066 55.63C120.066 46.2804 122.554 41.4633 131.181 40.2844L131.172 39.3901C119.573 40.1828 110.631 44.2377 110.631 56.006C110.631 65.386 115.088 69.7153 127.123 69.7153C132.834 69.7153 136.001 65.2946 136.001 63.9633V65.6401C136.001 67.9165 137.728 69.7153 139.808 69.7153H147.079C147.088 69.7153 145.445 67.7234 145.445 64.695Z" fill="black"/>
-					</svg>
 				</a>
 			</div>
 			<!--Menu desktop-->
 			<div class="menu-desktop">
-				<div class="main-menu-desktop">
+				<div class="main-menu-desktop menu-black">
 					<ul>
 						<a href="https://facebook.com" target="_blank" class="fa fa-facebook"><li></li></a>
 						<a href="https://instagram.com" target="_blank" class="fa fa-instagram"><li></li></a>
@@ -64,7 +50,7 @@
 						<li><a href="#blog"><div class="menu-img"><img src="images/menu/blog.png" alt="blog link"></div><span class="menu-word">BLOG</span></a></li>						
 					</ul>
 				</div>
-				<div class="contact-btn">
+				<div class="contact-btn menu-black">
 					<a href="#contactus"><span class="menu-word">LET'S TALK</span></a>
 				</div>
 			</div>
@@ -87,21 +73,14 @@
 			</div>
 		</header>
 
-		<div class="loader" id="loader">
-			<!--<img src="images/loading.gif" alt="loader">-->
-			<video autoplay muted loop class="video-home">
-				<source src="images/loading_vid.mp4" type="video/mp4">
-			</video>
-		</div>
-
 		<!--Menu Mobile-->
 		<div class="menu">
 			<div class="menuItems">
 				<ul class="main-menu">
 					<a href="#home"><li>HOME</li></a>
-					<a href="#aboutus"><li>ABOUT US</li></a>
-					<a href="#portafolio"><li>PORTAFOLIO</li></a>
+					<a href="#aboutus"><li>ABOUT US</li></a>					
 					<a href="#services"><li>SERVICES</li></a>
+					<a href="#work"><li>PORTAFOLIO</li></a>
 					<a href="#contactus"><li>LET'S TALK</li></a>
 				</ul>
 				<ul class="social-buttons">
@@ -118,7 +97,7 @@
 				<a href="#contactus"><li>LET'S TALK</li></a>
 			</div>
 		</div>
-		
+	
 		<div id="fullpage">	
 			<!--COVER SECTION-->					
 			<div class="section home child" id="section0">
@@ -632,15 +611,8 @@
 		</div>
 
 		<footer class="footer">
-			<div class="discover">
-				SCROLL TO DISCOVER				
-			</div>	
-			<svg class="footer-line" width="1" height="76" viewBox="0 0 1 76" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<line x1="0.5" y1="2.18557e-08" x2="0.499997" y2="76" stroke="#FFFBFB"/>
-			</svg>		
 			<div class="mouse">
 				<img class="white_scroll" src="images/white_scroll.gif" alt="scroll white">
-				<!--<img class="black_scroll" src="images/black_scroll.gif" alt="scroll black">-->
 			</div>
 		</footer>
 		
@@ -706,22 +678,15 @@
 			  </div>
 			</div>
 		</div>
-				
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha512-0xrMWUXzEAc+VY7k48pWd5YT6ig03p4KARKxs4Bqxb9atrcn2fV41fWs+YXTKb8lD2sbPAmZMjKENiyzM/Gagw==" 
 			crossorigin="anonymous" referrerpolicy="no-referrer">
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" 
 			crossorigin="anonymous" referrerpolicy="no-referrer">
-		</script>
-		<script src="js/card3d.js"></script>		
-		<script type="text/javascript" src="js/fullpage.parallax.min.js"></script>
+		</script>	
 		<script type="text/javascript" src="js/fullpage.js"></script>
 		<script>
-			// Remove the loading screen when the content is loaded
-			window.addEventListener('load', function() {
-			  var loadingFrame = document.getElementById('loader');
-			  loadingFrame.style.display = 'none';			  
-			});
 			//Full page		
 			var myFullpage = new fullpage('#fullpage', {
 				css3:true,
@@ -732,12 +697,6 @@
     			fitToSectionDelay: 1000,
 				verticalCentered: true,    			
 				dragAndMove: true,
-				parallax: true, 
-				parallaxOptions: {
-					type: 'reveal', 
-					percentage: 62,
-					property: 'translate'
-				},
   				normalScrollElements: '.scrollable-content',
 				anchors: ['home', 'home-bottom', 'aboutus', 'aboutus', 'aboutus', 'aboutus', 'services', 'work', 'blog', 'contactus', 'location', 'footer'],
 				menu: '#menu',
@@ -745,24 +704,13 @@
 					//Variables
 					const mouse = document.querySelector('.mouse');
 					const sectionTitleDiv = document.querySelector('.section-title');
-					const header = document.querySelector('header');
 					const scrollWhite = document.querySelector('.white_scroll');
-					const logoS = document.querySelector('.logo-s');
 					const targetLinkId = 'a[href="#' + index.anchor + '"]';
 					document.querySelector('.contact-btn a').classList.remove('active')
 					document.querySelectorAll('.main-menu-links a').forEach(function(link) {
 						link.classList.remove('active');
 					});	
-					if (index.index === 3) {
-						document.querySelector('.discover').style.display = 'block';
-						document.querySelector('.footer-line').style.display = 'block';
-					}else {
-						document.querySelector('.discover').style.display = 'none';
-						document.querySelector('.footer-line').style.display = 'none';
-					}
 					if (index.anchor === 'home') {
-						logoS.style.fill = 'white';
-						mouse.style.display = 'flex';
 						mouse.classList.remove('mouseActive');
 						sectionTitleDiv.innerHTML = '';
 						document.querySelector('.home-link').classList.add('active');
@@ -770,8 +718,6 @@
 						mouse.classList.add('mouseActive');
 						if (index.anchor === 'home-bottom') {
 							sectionTitleDiv.textContent = 'HOME';
-							sectionTitleDiv.style.color = 'white';
-							logoS.style.fill = 'white';	
 							document.querySelector('.home-link').classList.add('active');	
 						}else {
 							if (document.querySelector(targetLinkId)) {
@@ -780,58 +726,43 @@
 						}
 						if (index.anchor === 'aboutus' || index.anchor === 'team' || index.anchor === 'about-second') {
 							sectionTitleDiv.textContent = 'ABOUT US';
-							sectionTitleDiv.style.color = 'white';
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'services') {
 							sectionTitleDiv.textContent = 'SERVICES';
-							sectionTitleDiv.style.color = 'white';
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'work') {
 							sectionTitleDiv.textContent = 'WORK';
-							sectionTitleDiv.style.color = 'white';
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'blog') {
 							sectionTitleDiv.textContent = 'BLOG';
-							sectionTitleDiv.style.color = 'white';
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'contactus') {
 							sectionTitleDiv.textContent = 'CONTACT US';
-							sectionTitleDiv.style.color = 'white'
 							document.querySelector('.contact-btn a').classList.add('active');
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'location') {
 							sectionTitleDiv.textContent = 'CONTACT US';
-							sectionTitleDiv.style.color = 'white'
 							document.querySelector('.contact-btn a').classList.add('active');
-							logoS.style.fill = 'white';
 						}
 						if (index.anchor === 'footer') {
 							sectionTitleDiv.textContent = '';
-							logoWhite.style.display = 'none';
-							logoBlack.style.display = 'none';
 							scrollWhite.style.display = 'none';
-							document.querySelector('.menu-desktop').style.display = 'none'
+							document.querySelector('header').style.display = 'none'
 						}else {
-							document.querySelector('.menu-desktop').style.display = 'flex'
+							document.querySelector('header').style.display = 'flex'
+							scrollWhite.style.display = 'block';
 						}
 					}
 				},
 				onLeave: function(index, nextIndex, origin){
 					if(nextIndex.anchor!=="home"){
-						document.querySelector('.main-menu-desktop').classList.add('menu-black')
-						document.querySelector('.contact-btn').classList.add('menu-black')
-						document.querySelector('.white').style.display = 'none';
-						document.querySelector('.black').style.display = 'block';
+						for (let i = 1; i < document.querySelectorAll('.white path').length; i++) {
+							document.querySelectorAll('.white path')[i].style.display = 'none';
+						}						
 					}else {
-						document.querySelector('.main-menu-desktop').classList.remove('menu-black')
-						document.querySelector('.contact-btn').classList.remove('menu-black')
-						document.querySelector('.white').style.display = 'block';
-						document.querySelector('.black').style.display = 'none';
+						for (let i = 1; i < document.querySelectorAll('.white path').length; i++) {
+							document.querySelectorAll('.white path')[i].style.display = 'block';
+						}
 					}
 					//Animate texts for each section
 					if(nextIndex.anchor!=="footer") {
