--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<video autoplay muted loop plays-inline class="back-video" data-autoplay>
 					<source src="images/beach.mp4" type="video/mp4">
 				</video>			
-				<div class="home-bottom-text" data-card3d=""  data-card3d-full-page-listening="true" data-card3d-delta="3">
+				<div class="home-bottom-text">
 					<h1 id="parallax-text">
 						Unlock Your Digital Potential
 						with the Leading Marketing Agency
@@ -210,83 +210,7 @@
 					</video>
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
-							<h1>OUR TEAM</h1>
-							<div class="text-wrapper">
-								<!--<p>Our dynamic team of experts
-									at Sadaf Media, We take great pride
-									in our exceptional team.
-								</p>-->
-							</div>			
-						</div>
-						<div class="wrapper">
-							<label id="left" class="carousel__control carousel__control--backward animate">
-								<a class="back-button" href="#">
-									<span>
-										<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="white"/>
-										</svg>
-									</span>
-								</a>
-							</label>
-							<div class="carousel">
-								<div class="team-item">
-									<img src="images/team/1.jpg" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Sheikh Khalifa Bin Sultan Al Nahyan</p>
-										<p class="position">CEO - FOUNDER</p>
-									</div>
-								</div>
-								<div class="team-item">
-									<img src="images/team/2.png" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Juliette Chamorro Basurto</p>
-										<p class="position">Asst. Director</p>
-									</div>
-								</div>
-								<div class="team-item">
-									<img src="images/team/3.png" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Sarah Hoornaert</p>
-										<p class="position">Content Creator</p>
-									</div>
-								</div>
-								<div class="team-item">
-									<img src="images/team/4.png" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Maria Andrea Nieves</p>
-										<p class="position">Social Media Content Creator</p>
-									</div>
-								</div>
-								<div class="team-item">
-									<img src="images/team/5.png" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Julian Claria</p>
-										<p class="position">Social Media Executive</p>
-									</div>
-								</div>
-								<div class="team-item">
-									<img src="images/team/6.png" alt="img" draggable="false">
-									<div class="team-item-overlay"></div>
-									<div class="team-more">
-										<p class="name">Carlos Romero</p>
-										<p class="position">Designer</p>
-									</div>
-								</div>
-							</div>
-							<label id="right" class="carousel__control carousel__control--forward animate">
-								<a class="next-button" href="#">
-									<span>
-										<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
-										</svg>
-									</span>
-								</a>   
-							</label>
+							<h1>OUR TEAM</h1>			
 						</div>
 					</div>
 				</div>
@@ -297,100 +221,67 @@
 					</video>
 					<div class="team-text">
 						<h1>OUR TEAM</h1>
-						<!--<h4>Our dynamic team of experts
-							at Sadaf Media, We take great pride
-							in our exceptional team.
-						</h4>-->
-					</div>
-					<div class="gallery-team animate">
-						<div class="gallery-container-team">
-						<img class="gallery-item-team gallery-item-team-1" src="images/team2/1.png" alt="" data-index="1">
-						<img class="gallery-item-team gallery-item-team-2" src="images/team2/2.png" alt="" data-index="2">
-						<img class="gallery-item-team gallery-item-team-3" src="images/team2/3.png" alt="" data-index="3">
-						<img class="gallery-item-team gallery-item-team-4" src="images/team2/4.png" alt="" data-index="4">
-						<img class="gallery-item-team gallery-item-team-5" src="images/team2/5.png" alt="" data-index="5">
-						<div class="gallery-controls-team">
-							<a class="back-button gallery-controls-team-previous" href="#">
-							<span>
-								<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="white"/>
-								</svg>
-							</span>
-							</a>
-							<a class="next-button gallery-controls-team-next" href="#">
-							<span>
-								<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
-								</svg>
-							</span>
-							</a>        
-						</div>
-						</div>    
-					</div>
+					</div>					
 				</div>
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<div data-card3d=""  data-card3d-full-page-listening="true" data-card3d-delta="3">
-						<h1>HOW WE WORK</h1>
-						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
-						<div class="text-wrapper">
-							<div class="text-content">
-								<p>At Sadaf Media, we can’t wait to hear about your project and begin 
-									developing an exciting integrated strategy and meaningful vision for 
-									your brand, which we know is the first step towards generating quality 
-									leads and delivering the growth you want. 
-								</p>
-								<p>Without the right team, the distinctive qualities that make a brand special 
-									can easily get lost, which is why we always take the time to really get to 
-									know our clients. This enables our creative experts to come up with the 
-									far-reaching solutions that we know will produce truly outstanding results 
-									and redefine your position in the market. 
-								</p>
-							</div>
-							<div class="text-content">
-								<p>We will work closely with you to build on your brand’s unique strengths, 
-									while producing an engaging, exciting and experiential narrative, both 
-									online and offline, that will truly resonate with audiences.
-								<p>					
-									We are more than happy to shoulder this responsibility and are confident 
-									in our ability to produce the content that will elevate your brand. 
-									We will put your message out there, where it belongs – in the market, 
-									getting people talking, driving traffic and achieving results.
-								</p>							
-							</div>
+					<h1>HOW WE WORK</h1>
+					<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
+					<div class="text-wrapper">
+						<div class="text-content">
+							<p>
+								At Sadaf Media, we can’t wait to hear about your project and begin 
+								developing an exciting integrated strategy and meaningful vision for 
+								your brand, which we know is the first step towards generating quality 
+								leads and delivering the growth you want. 
+							</p>
+							<p>
+								Without the right team, the distinctive qualities that make a brand special 
+								can easily get lost, which is why we always take the time to really get to 
+								know our clients. This enables our creative experts to come up with the 
+								far-reaching solutions that we know will produce truly outstanding results 
+								and redefine your position in the market. 
+							</p>
+						</div>
+						<div class="text-content">
+							<p>
+								We will work closely with you to build on your brand’s unique strengths, 
+								while producing an engaging, exciting and experiential narrative, both 
+								online and offline, that will truly resonate with audiences.
+							</p>
+							<p>					
+								We are more than happy to shoulder this responsibility and are confident 
+								in our ability to produce the content that will elevate your brand. 
+								We will put your message out there, where it belongs – in the market, 
+								getting people talking, driving traffic and achieving results.
+							</p>							
 						</div>
 					</div>
 					<div class="service-wrapper animate">
 						<div class="services-more">
 							<div class="service first">
 								<img class="icon" src="images/services/1/icon.png" alt="service icon">
-								<img class="circle" src="images/services/1/circle.png" alt="service circle">
 								<h5 class="service-text">MEDIA STRATEGY CONSULTANCY</h5>
 							</div>
 							<div class="service second">
 								<img class="icon" src="images/services/2/icon.png" alt="service icon">
-								<img class="circle" src="images/services/2/circle.png" alt="service circle">
 								<h5 class="service-text">CREATIVE BRANDING & DESIGN</h5>
 							</div>
 							<div class="service three">
 								<img class="icon" src="images/services/3/icon.png" alt="service icon">
-								<img class="circle" src="images/services/3/circle.png" alt="service circle">
 								<h5 class="service-text">CREATIVE BRANDING & DESIGN</h5>
 							</div>
 							<div class="service four">
 								<img class="icon" src="images/services/4/icon.png" alt="service icon">
-								<img class="circle" src="images/services/4/circle.png" alt="service circle">
 								<h5 class="service-text">VIDEOGRAPHY & PHOTOGRAPHY</h5>
 							</div>
 							<div class="service five">
 								<img class="icon" src="images/services/5/icon.png" alt="service icon">
-								<img class="circle" src="images/services/5/circle.png" alt="service circle">
 								<h5 class="service-text">ANIMATION</h5>
 							</div>
 							<div class="service six">
 								<img class="icon" src="images/services/6/icon.png" alt="service icon">
-								<img class="circle" src="images/services/6/circle.png" alt="service circle">
 								<h5 class="service-text">SOCIAL MEDIA</h5>
 							</div>
 						</div>
@@ -411,32 +302,7 @@
 							<a class="Animation" href="#"><li>ANIMATION</li></a>
 						</ul>
 					</div>
-				</div>
-				<div class="gallery animate">
-					<div class="gallery-container">
-					  <img class="gallery-item gallery-item-1" src="images/work/1.png" alt="" data-index="1">
-					  <img class="gallery-item gallery-item-2" src="images/work/2.png" alt="" data-index="2">
-					  <img class="gallery-item gallery-item-3" src="images/work/3.png" alt="" data-index="3">
-					  <img class="gallery-item gallery-item-4" src="images/work/4.png" alt="" data-index="4">
-					  <img class="gallery-item gallery-item-5" src="images/work/1.png" alt="" data-index="5">
-					  <div class="gallery-controls">
-						<a class="back-button gallery-controls-previous" href="#">
-						  <span>
-							<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-							  <path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="white"/>
-							</svg>
-						  </span>
-						</a>
-						<a class="next-button gallery-controls-next" href="#">
-						  <span>
-							<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							  <path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
-							</svg>
-						  </span>
-						</a>        
-					  </div>
-					</div>    
-				</div>
+				</div>				
 			</div>
 			<!--BLOG SECTION-->
 			<div class="section blog child">
@@ -452,72 +318,7 @@
 								<a href="#design"><li>GRAPHICS DESIGN</li></a>
 							</ul>
 						</div>					
-					</div>	
-					<div class="gallerry-wrapper animate">
-						<div class="gallery">
-							<figure class="gallery__item gallery__item--1">
-								<img src="images/blog/1.png" alt="Gallery image 1" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-							<figure class="gallery__item gallery__item--2">
-								<img src="images/blog/2.png" alt="Gallery image 2" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-							<figure class="gallery__item gallery__item--3">
-								<img src="images/blog/3.png" alt="Gallery image 3" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-							</figure>
-							<figure class="gallery__item gallery__item--4">
-								<img src="images/blog/4.png" alt="Gallery image 4" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-							<figure class="gallery__item gallery__item--5">
-								<img src="images/blog/5.png" alt="Gallery image 5" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-							<figure class="gallery__item gallery__item--6">
-								<img src="images/blog/6.png" alt="Gallery image 6" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-							<figure class="gallery__item gallery__item--7">
-								<img src="images/blog/7.png" alt="Gallery image 7" class="gallery__img">
-								<figcaption>What should you know about digital marketing?</figcaption>
-								<div class="more-text">
-									<p>READ MORE</p>
-									<p>23/05/2023</p>
-								</div>
-							</figure>
-						</div>
-						<div class="blog-button">
-							<a href="#">
-								<span>
-									<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
-									</svg>
-								</span>
-							</a>
-						</div>
-					</div>	
+					</div>						
 				</div>
 			</div>
 			<!--CONTACT US SECTION-->
@@ -550,9 +351,6 @@
 						</a>
 					</div>				
 				</div>
-				<!--<div class="location-circle">
-					<img src="images/location_circle1.png" alt="location image back">
-				</div>-->
 			</div>
 			<!--LOCATION SECTION-->
 			<div class="section location child">
@@ -572,9 +370,6 @@
 			</div>
 			<!--FOOTER SECTION-->
 			<div class="section footer footer-fake child">
-				<!--<div class="location-circle-footer">
-					<img src="images/location_circle2.png" alt="location image back">
-				</div>-->
 				<div class="footer-fake-text">
 					<div class="footer-fake-logo">
 						<img src="images/logo_white.png" alt="logo footer">
