Add animate class to team items

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
-							<div id="team-slider" class="splide" role="group" aria-label="Team carousel">
+							<div id="team-slider" class="splide animate" role="group" aria-label="Team carousel">
 								<div class="splide__arrows">
 									<button class="splide__arrow splide__arrow--prev">
 										<svg style="transform: rotate(0deg);" width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
